get profile with pictures
