# controllers/user.js
@@ -1,4 +1,9 @@
-const {doRequestAxios} = require('../helpers/axiosHelper');
+const {HTTP_SUCCESS_2XX} = require('../helpers/httpCodes');
+const {
+    doRequestAxios,
+    doChainRequestAxios,
+    sendRequestAxios
+} = require('../helpers/axiosHelper');
 const {SERVICES} = require('../types/services');
 
 /**
@@ -57,6 +62,43 @@ const user_profile = async (req, res) => {
     await doRequestAxios(req, res, SERVICES.PROFILES);
 }
 
+/**
+ * @returns Respuesta de la solicitud http
+ */
+const get_user_profile_pictures = async (req, res = response) => {
+    const newUrl = req.url.replace('/profile','/profile/pictures');
+    await  doChainRequestAxios(req, res, SERVICES.PROFILES, null, 
+        async (req, res, data1, status1) => {
+            const {status: status2, data: data2} = await sendRequestAxios(
+                req, 
+                res, 
+                SERVICES.PROFILES, 
+                newUrl);
+            if (status1 === HTTP_SUCCESS_2XX.OK) {
+                if (status2 === HTTP_SUCCESS_2XX.OK) {
+                    return {
+                        status: status2,
+                        data: {
+                            ...data1,
+                            pictures: data2.pictures
+                        }
+                    };
+                } else {
+                    return {
+                        status: status2,
+                        data: data2
+                    };
+                };                    
+            } else {
+                return {
+                    status: status1,
+                    data: data1
+                };
+            };           
+        }
+    );
+}
+
 module.exports = {
     current,
     user,
@@ -65,5 +107,6 @@ module.exports = {
     user_id_matchs, 
     user_match,
     user_profile,
+    get_user_profile_pictures,
     match_filter,
 }
